--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/.vscode/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -42,7 +43,6 @@ ExportedObj/
 *.mdb
 *.opendb
 *.VC.db
-*.vscode
 
 # Unity3D generated meta files
 *.pidb.meta
